Upgraded Jetty version to 2.0.17